--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,10 @@ repo: status-page # The name of this repository
 sites:
   - name: Rootk1d.xyz
     url: https://rootk1d.xyz
+  - name: Discord FunTasticBot
+    check: "tcp-ping"
+    url: https://rootk1d.xyz
+    port: 2222
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
