--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -39,6 +39,15 @@ status-website:
       href: https://discord.gg/QQaWvMkFbs
     - title: GitHub
       href: https://github.com/$OWNER
+      
+workflowSchedule:
+  graphs: "*/2 * * * *"
+  responseTime: "*/2 * * * *"
+  staticSite: "0 1 * * *"
+  summary: "0 0 * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
+  uptime: "*/2 * * * *"
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
